--- a/src/app/components/edit-details/edit-details.component.html
+++ b/src/app/components/edit-details/edit-details.component.html
@@ -46,7 +46,7 @@
             <div class="form-group">
                   <label for="inputWeight" class="col-lg-2 control-label">Weight</label>
                   <div class="col-lg-5">
-                    <input type="number" class="form-control" id="inputWeight" name="height" [(ngModel)] = "height">
+                    <input type="number" class="form-control" id="inputWeight" name="height" [(ngModel)] = "weight">
                   </div>
             </div>
             <div class="form-group">
