--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
         <app-navbar></app-navbar>
     </div>
     <div class="col-md-12">
-        <router-outlet></router-outlet>
+        <div class="container">
+            <router-outlet></router-outlet>    
+        </div>
     </div>    
 </div>
 
