--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,11 +12,11 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li *ngIf="isLoggedIn" ><a [routerLink]="['/edit-details']">Enter Details <span class="sr-only">(current)</span></a></li>
         <li *ngIf="isLoggedIn" ><a [routerLink]="['/view-details']">View Details</a></li>
+        <li *ngIf="isLoggedIn" ><a [routerLink]="['/edit-details']">Enter Details</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li *ngIf="isLoggedIn" ><a >Welcome,<b>{{ email }}</b></a></li>
+        <li *ngIf="isLoggedIn" ><a >Welcome, &nbsp; <b>{{ email }}</b></a></li>
         <li *ngIf="isLoggedIn" ><a (click) = "logout()">LOGOUT</a></li>
       </ul>
     </div>
