--- a/src/app/components/view-details/view-details.component.html
+++ b/src/app/components/view-details/view-details.component.html
@@ -1,3 +1,23 @@
-<p>
-  view-details works!
-</p>
+<table class="table table-striped table-hover ">
+  <thead>
+    <tr>
+      <th>Week Number</th>
+      <th>Exercise</th>
+      <th>Body Fat Percentage</th>
+      <th>Waist Circumference</th>
+      <th>Weight</th>
+      <th>Basal Metabolic Rate</th>
+      <th>Image</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+    </tr>
+    
+   
+  </tbody>
+</table> 
